[package]
name = "dnbradio-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnbradio-bot"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
serenity = "0.12.2"
irc = { version = "1.0.0", default-features = false, features = ["tls-rust"] }
futures = "0.3.30"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = "1.0.209"
serde_json = "1.0.127"
env_logger = "0.11.5"
minimp3 = { git = "https://github.com/germangb/minimp3-rs.git", rev = "a7a3af9d318d6dfa3116cb0d72ef53c279369cd0", features = ["async_tokio"] }
log = "0.4.22"
chfft = "0.3.4"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
byteorder = "1.5.0"
crc32fast = "1.4.2"
base64 = "0.22.1"
dyn-fmt = "0.4.0"
regex = "1.10.6"
md5 = "0.7.0"
