[package]
name = "dnbradio-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnbradio-bot"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
chrono = "0.4.40"
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.98"
serenity = "0.12.4"
irc = { version = "1.1.0", default-features = false, features = ["tls-rust"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
env_logger = "0.11.8"
minimp3_fixed = { version = "0.5.4", features = ["async_tokio"] }
log = "0.4.27"
chfft = "0.3.4"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
byteorder = "1.5.0"
crc32fast = "1.4.2"
base64 = "0.22.1"
dyn-fmt = "0.4.3"
regex = "1.11.1"
md5 = "0.7.0"
rustls = { version = "0.23.26", features = ["ring"], default-features = false }
